# ecostruxure

./: .clang-format  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  conanfile.txt  config.h.in  ecostruxure.cpp
.github/workflows/: cmake.yml
src/: Plugin.cpp
src/component/: EcoStruxureAdapter.cpp  EcoStruxureAdapter.h
src/factory/: EcoStruxureFactory.cpp  EcoStruxureFactory.h
test/: .cproject  .project  CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
test/dummy/copa/: ComponentController.cpp  FactoryController.cpp
test/dummy/osal/: Semaphore.cpp  Semaphore.h  SemaphoreFactory.cpp
test/src/factory/: EcoStruxureFactoryTest.cpp
